<resources>
    <string name="appName">Student Assistance App</string>
    <string name="lowerLogin">Login</string>
    <string name="upperLogin">LOGIN</string>
    <string name="etUsername">Username</string>
    <string name="etPassword">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="school_logo">School Logo</string>
    <string name="titleName">Name</string>
    <string name="submit">Submit</string>
    <string name="noAccount">Don\'t have an account?</string>
</resources>