<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_mobile2"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/upperLogin"
        android:textColor="@color/secondaryBlue"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="137dp"
        android:layout_height="146dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/school_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/school_logo" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/design_default_color_surface"
        android:drawableStart="@drawable/ic_user"

        android:ems="10"
        android:hint="@string/etUsername"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:labelFor="@id/etUsername"
        android:minHeight="48dp"
        android:textColor="@color/secondaryBlue"
        android:textColorHint="@color/secondaryBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLogin" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_pass"
        android:ems="10"
        android:hint="@string/etPassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/secondaryBlue"
        android:textColorHint="@color/secondaryBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsername" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="310dp"
        android:layout_height="54dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/secondaryBlue"
        android:text="@string/upperLogin"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"
        android:textColor="@color/secondaryBlue"
        android:textColorHint="@color/secondaryBlue"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/txtNoAccount"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <ImageButton
        android:id="@+id/googlelogin"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/transparent"
        android:scaleType="centerInside"
        android:src="@drawable/googleicon"
        app:layout_constraintEnd_toStartOf="@+id/facebooklogin"
        app:layout_constraintStart_toEndOf="@+id/yahoologin"
        app:layout_constraintTop_toBottomOf="@+id/txtLabelOR"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/yahoologin"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/transparent"
        android:scaleType="centerInside"
        android:src="@drawable/yahoologin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLabelOR"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/facebooklogin"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="90dp"
        android:backgroundTint="@android:color/transparent"
        android:scaleType="centerInside"
        android:src="@drawable/facebookicon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLabelOR"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/txtLabelOR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="OR"
        android:textColor="@color/secondaryBlue"
        android:textColorHint="@color/secondaryBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSignUp" />

    <TextView
        android:id="@+id/txtNoAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="20dp"
        android:text="@string/noAccount"
        android:textColor="@color/secondaryBlue"
        android:textColorHint="@color/secondaryBlue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>